--- a/.env
+++ b/.env
@@ -10,7 +10,12 @@ DB_NAME=expense_tracker
 
 # JWT Configuration
 JWT_SECRET=passwordJWT
-JWT_EXPIRATION=24h
+JWT_EXPIRATION=7d
 
 # Security
 BCRYPT_SALT_ROUNDS=10
+
+
+FRONTEND_URL=http://localhost:3000
+EMAIL_USER=herta.torphy@ethereal.email
+EMAIL_PASSWORD=s2waRxJ3yD1NpZ4Nqt
