--- a/.env
+++ b/.env
@@ -15,7 +15,14 @@ JWT_EXPIRATION=7d
 # Security
 BCRYPT_SALT_ROUNDS=10
 
-
+#Email
 FRONTEND_URL=http://localhost:3000
 EMAIL_USER=herta.torphy@ethereal.email
 EMAIL_PASSWORD=s2waRxJ3yD1NpZ4Nqt
+
+
+
+GOOGLE_CLIENT_ID=1043857193922-5cmdb8fro5aejsr69qqk0csrtp2lj2bm.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
+SESSION_SECRET=secret
